# FAST-UAV

./: .gitignore  .pre-commit-config.yaml  01_Multirotor_Design.ipynb  01_Multirotor_Design_trajectory.ipynb  01_tutorial-Drone.ipynb  01b_Multirotor_Design_Catalogues.ipynb  02_Mission_performance.ipynb  03_Uncertainty-DJI_matrice_600.ipynb  03_Uncertainty-DJI_matrice_600_catalogues.ipynb  03_Uncertainty.ipynb  03_Uncertainty_analysis.ipynb  03b_Uncertainty_analysis_catalogues.ipynb  11_FixedWing_Design.ipynb  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: build_release.yml  tests.yml  watchdog_tests.yml
.ipynb_checkpoints/: 01_Multirotor_Design-checkpoint.ipynb  01_Multirotor_Design_trajectory-checkpoint.ipynb  01_tutorial-Drone-checkpoint.ipynb
Tests/: 2D_geometry_drone.ipynb  DT_test.ipynb  mass_breakdown_drone.ipynb
Tests/.ipynb_checkpoints/: 2D_geometry_drone-checkpoint.ipynb
Tests/Trajectory/: forward_flight.py
Tests/uncertainty/: battery_uncertainty.py  esc_uncertainty.py  motor_uncertainty.py  propeller_uncertainty.py
components/: drone_problem.py  n2.html  register.py
components/Battery/: battery.py
components/Battery/Constraints/: battery_constraints.py
components/Battery/Performances/: battery_performance.py
components/Battery/Weight/: battery_weight.py
components/ESC/: esc.py
components/ESC/Constraints/: esc_constraints.py
components/ESC/Performances/: esc_performance.py
components/ESC/Weight/: esc_weight.py
components/Energy_source/: energy_source.py
components/Missions/: missions.py
components/Missions/Scenarios/: scenarios.py
components/Motor/: motor.py
components/Motor/Constraints/: motor_constraints.py
components/Motor/Gearbox/: gearbox_model.py
components/Motor/Performances/: motor_performance.py
components/Motor/Weight/: motor_weight.py
components/Objectives/: objectives.py
components/Propeller/: propeller.py
components/Propeller/Aerodynamics/: propeller_aero.py
components/Propeller/Constraints/: propeller_constraints.py
components/Propeller/Geometry/: propeller_geometry.py
components/Propeller/Performances/: propeller_performance.py
components/Propeller/Weight/: propeller_weight.py
components/Structure/: structure.py
components/Structure/Geometry/: structure_geometry.py
components/Structure/Weight/: structure_weight.py
data/: fixedwing_mdo.yaml  multirotor_mdo.yaml  multirotor_mdo_consistency.yaml  multirotor_mdo_discrete.yaml  multirotor_model.yaml  multirotor_model_consistency.yaml  multirotor_model_discrete.yaml  multirotor_model_discrete_consistency.yaml  multirotor_performance.yaml  oad_process_drone.toml  oad_process_drone_trajectory.toml  oad_process_drone_trajectory_2.toml  odd_process_multirotor.yaml  problem_inputs_DJI_M600.xml  problem_inputs_FW.xml  problem_outputs_DJI_M600_mdo.xml  problem_outputs_discrete_DJI_M600_mdo.xml
data/.ipynb_checkpoints/: multirotor_model-checkpoint.yaml  multirotor_model_consistency-checkpoint.yaml
data/DecisionTrees/Batteries/: Augmented-Batteries.csv  Batteries_Data.csv  Non-Dominated-Augmented-Batteries.csv  Non-Dominated-Batteries - old.csv
data/DecisionTrees/Motors/: Non-Dominated-Motors.csv
data/DecisionTrees/Propeller/: APC_propellers.csv  APC_propellers_MR.csv  Propeller_Data.csv
data/catalogues/Batteries/: Augmented-Batteries.csv  Non-Dominated-Batteries.csv
data/catalogues/ESC/: ESC_data.csv
data/catalogues/Motors/: Motors_Data.csv
models/: register.py  variable_descriptions.txt
models/Add_ons/Safety/: safety.py
models/Add_ons/Study_missions/: mission_concordia.py
models/Airframe/: airframe.py
models/Airframe/fixedwing/: aerodynamics.py  geometry.py  weights.py
models/Airframe/multirotor/: airframe.py  geometry.py  weights.py
models/Components/Cables/: cables.py
models/Components/ESC/: constraints.py  definition_parameters.py  esc.py  performances.py
models/Components/Motor/: constraints.py  definition_parameters.py  motor.py  performances.py
models/Components/Propeller/: constraints.py  definition_parameters.py  performances.py  propeller.py
models/Components/Structure/: structure.py
models/ESC/: esc.py
models/ESC/Characteristics/: esc_characteristics.py
models/Energy_source/: energy_source.py
models/Missions/: Mission.py  Missions.py  mission_concordia.py  mission_design.py  mission_nominal.py  missions.py
models/Motor/: motor.py
models/Objectives/: objectives.py
models/Propeller/: propeller.py
models/Scenarios/: architecture.py  atmosphere.py  flight_model.py  sizing_scenarios.py
models/Stability/: stability.py
models/Structure/: structure.py
models/System/: System.py  system.py
models/Uncertainty/: uncertainty.py
models/aerodynamics/: aerodynamics_fixedwing.py
models/geometry/: geometry_fixedwing.py
models/missions/: mission_design.py
models/performance/: performance.py
models/scenarios/: atmosphere.py
models/structures/: structures_fixedwing.py  structures_multirotor.py
models/uncertainty/: uncertainty.py
src/fastuav/: constants.py  exceptions.py
utils/DecisionTrees/: predicted_values_DT.py
utils/catalogues/: estimators.py  predicted_values_DT.py
utils/drivers/: cmaes_driver.py  cmaes_driver_legacy.py  salib_doe_driver.py
utils/postprocessing/: analysis_and_plots.py  monte_carlo.py  morris.py  sensitivity_analysis.py  sobol.py
workdir/: model_inputs.xml  model_outputs.xml  n2.html  oad_process_drone.toml  oad_process_drone_ref.toml  operational_mission_in.xml  operational_mission_out.xml  problem_inputs.xml  problem_inputs_discrete.xml  problem_inputs_performance.xml  problem_inputs_ref.xml  problem_inputs_trajectory.xml  problem_outputs.xml  problem_outputs_continuous.xml  problem_outputs_continuous_dji.xml  problem_outputs_discrete.xml  problem_outputs_discrete_dji.xml  problem_outputs_mda.xml  problem_outputs_mdo.xml  problem_outputs_performance.xml
workdir/sensitivity_analysis/: doe_Morris.csv  doe_Sobol.csv  problem_morris.txt  problem_sobol.txt  x_morris.txt  y_morris.txt  y_sobol.txt
(+451 files in other folders)
